--- a/index.html
+++ b/index.html
@@ -183,6 +183,17 @@
         </div>
       </div>
 
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-4">
+          
+          <div class="col-lg-3 col-md-6">
+            <div class="stats-item text-center w-100 h-100">
+              <p> </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="container section-title" data-aos="fade-up">
         <h4 style="color: brown;">注意！</h4>
         <p>-未完成每日任務時，將會受到相應的懲罰-</p>
