--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -49,11 +49,11 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="#hero">首頁</a></li>
+          <li><a href="#about">關於漫畫</a></li>
+          <li><a href="#services">任務介紹</a></li>
+          <li><a href="#portfolio">角色展示</a></li>
+          <li><a href="#team">重要角色</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
