--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <ul>
           <li><a href="#hero" class="active">首頁</a></li>
           <li><a href="#about">關於漫畫</a></li>
-          <li><a href="#characters">角色介紹</a></li>
-          <li><a href="#highlights">劇情亮點</a></li>
-          <li><a href="#team">製作團隊</a></li>
-          <li class="dropdown"><a href="#"><span>更多角色</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="#characters">任務介紹</a></li>
+          <li><a href="#highlights">相關圖片</a></li>
+          <li><a href="#team">重要角色</a></li>
+          <li class="dropdown"><a href="#"><span>更多</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">S級獵人</a></li>
               <li><a href="#">影子軍團</a></li>
@@ -322,7 +322,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>角色展示</h2>
+        <h2>相關圖片</h2>
         <p>探索《我獨自升級》中的重要角色及其精彩冒險，了解他們如何克服挑戰、升級並發揮潛力。</p>
       </div><!-- End Section Title -->
 
@@ -508,86 +508,16 @@
     <!-- /Portfolio Section -->
 
     <!-- Pricing Section -->
-    <section id="pricing" class="pricing section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-          <h2>角色與計劃</h2>
-          <p>選擇你的成長之路，從普通學生到無敵強者，每個計劃都將帶領你升級並面對新的挑戰。</p>
-      </div><!-- End Section Title -->
-  
-      <div class="container">
-  
-          <div class="row gy-4">
-  
-              <!-- 無敵新手計劃 -->
-              <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
-                  <div class="pricing-item">
-                      <h3>無敵新手計劃</h3>
-                      <p class="description">適合初學者，輕鬆學會如何操作升級系統，掌握基礎技能，開啟冒險之路。</p>
-                      <h4><sup>$</sup>0<span> / 月</span></h4>
-                      <a href="#" class="cta-btn">開始免費體驗</a>
-                      <p class="text-center small">無需信用卡</p>
-                      <ul>
-                          <li><i class="bi bi-check"></i> <span>學會基礎技能</span></li>
-                          <li><i class="bi bi-check"></i> <span>開始每日任務</span></li>
-                          <li><i class="bi bi-check"></i> <span>升級系統簡單易懂</span></li>
-                          <li class="na"><i class="bi bi-x"></i> <span>無法解鎖高級技能</span></li>
-                      </ul>
-                  </div>
-              </div><!-- End Pricing Item -->
-  
-              <!-- 精英冒險者計劃 -->
-              <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
-                  <div class="pricing-item featured">
-                      <p class="popular">最受歡迎</p>
-                      <h3>精英冒險者計劃</h3>
-                      <p class="description">適合中級玩家，解鎖更多技能，挑戰強敵，提升實力。</p>
-                      <h4><sup>$</sup>29<span> / 月</span></h4>
-                      <a href="#" class="cta-btn">開始免費體驗</a>
-                      <p class="text-center small">無需信用卡</p>
-                      <ul>
-                          <li><i class="bi bi-check"></i> <span>解鎖中級技能</span></li>
-                          <li><i class="bi bi-check"></i> <span>獲得特殊任務</span></li>
-                          <li><i class="bi bi-check"></i> <span>挑戰強力副本</span></li>
-                          <li><i class="bi bi-check"></i> <span>獲得更多裝備</span></li>
-                          <li class="na"><i class="bi bi-x"></i> <span>無法參與高級戰鬥</span></li>
-                      </ul>
-                  </div>
-              </div><!-- End Pricing Item -->
-  
-              <!-- 極限強者計劃 -->
-              <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
-                  <div class="pricing-item">
-                      <h3>極限強者計劃</h3>
-                      <p class="description">適合進階玩家，升級至無敵狀態，掌控所有技能，征服所有敵人。</p>
-                      <h4><sup>$</sup>49<span> / 月</span></h4>
-                      <a href="#" class="cta-btn">開始免費體驗</a>
-                      <p class="text-center small">無需信用卡</p>
-                      <ul>
-                          <li><i class="bi bi-check"></i> <span>解鎖所有技能</span></li>
-                          <li><i class="bi bi-check"></i> <span>參與最強副本和對戰</span></li>
-                          <li><i class="bi bi-check"></i> <span>得到頂級裝備</span></li>
-                          <li><i class="bi bi-check"></i> <span>掌握所有升級技巧</span></li>
-                          <li><i class="bi bi-check"></i> <span>無敵狀態</span></li>
-                      </ul>
-                  </div>
-              </div><!-- End Pricing Item -->
-  
-          </div>
-  
-      </div>
-  
-  </section>
-  <!-- /Pricing Section -->
+    
+    <!-- /Pricing Section -->
 
     <!-- Team Section -->
     <section id="team" class="team section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>角色介紹</h2>
-        <p>《我獨自升級》中的角色們有著各自的背景與能力，一起陪伴主角成振宇成長，迎接不同的挑戰。</p>
+        <h2>重要角色</h2>
+        <p>《我獨自升級》中的角色們有著各自的背景與能力，一起陪伴主角程肖宇成長，迎接不同的挑戰。</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -596,11 +526,11 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt="成振宇"></div>
+              <div class="pic"><img src="assets/img/king.jpeg" class="img-fluid" alt="成振宇"></div>
               <div class="member-info">
-                <h4>成振宇</h4>
+                <h4>程肖宇</h4>
                 <span>主角</span>
-                <p>成振宇，曾是最弱的玩家，通過不斷的努力與冒險，最終成為最強的存在。他在故事中與朋友一起面對挑戰，逐步揭開自己的身世之謎。</p>
+                <p>曾是最弱的玩家，通過不斷的努力與冒險，最終成為最強的存在。他在故事中與他的軍團一起面對挑戰，逐步揭開世界背後的陰謀。</p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -613,11 +543,11 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt="梅雅"></div>
+              <div class="pic"><img src="assets/img/king'sfriend.jpg" class="img-fluid" alt="梅雅"></div>
               <div class="member-info">
-                <h4>梅雅</h4>
-                <span>女主角</span>
-                <p>梅雅，擁有強大的戰鬥技巧和堅強的意志，她在振宇的冒險過程中扮演了關鍵角色，是振宇的重要夥伴與支持者。</p>
+                <h4>劉晨皓</h4>
+                <span>男主摯友</span>
+                <p>是很率真的人，稱男主角為大哥，非常敬重他</p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -630,11 +560,11 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt="雲霄"></div>
+              <div class="pic"><img src="assets/img/Tomas.jpg" class="img-fluid" alt="雲霄"></div>
               <div class="member-info">
-                <h4>雲霄</h4>
-                <span>智謀者</span>
-                <p>雲霄擁有過人的智慧和策略頭腦，總是能為振宇提供關鍵的建議與情報，是團隊中不可或缺的智囊人物。</p>
+                <h4>托馬斯·安德烈</h4>
+                <span>國家權力級獵人</span>
+                <p>是很厲害的角色，被男主暴打過一頓並被男主的話語打動後，贈送了優質的武器給男主角</p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -647,11 +577,11 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt="雷斯"></div>
+              <div class="pic"><img src="assets/img/dragonking.jpg" class="img-fluid" alt="雷斯"></div>
               <div class="member-info">
-                <h4>雷斯</h4>
+                <h4>龍帝</h4>
                 <span>反派角色</span>
-                <p>雷斯是故事中的主要反派之一，擁有強大的力量與謀略，對振宇而言是一大挑戰。雷斯背後隱藏著深沉的陰謀。</p>
+                <p>故事中的主要反派之一，擁有強大的力量與謀略，對振宇而言是一大挑戰。</p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -681,7 +611,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="mb-4" data-aos="fade-up" data-aos-delay="200">
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4580.078713154468!2d121.19395863665092!3d24.968336750142253!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346823c1ec904dcb%3A0xcdc129d4455ce456!2z5ZyL56uL5Lit5aSu5aSn5a24!5e1!3m2!1szh-TW!2stw!4v1746341989915!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div><!-- End Google Maps -->
 
         <div class="row gy-4">
@@ -691,7 +621,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>地址</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>320桃園市中壢區中大路300號</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -699,15 +629,16 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>聯絡電話</h3>
-                <p>+1 5589 55488 55</p>
+                <p>034227151</p>
               </div>
             </div><!-- End Info Item -->
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
-                <h3>電子郵件</h3>
-                <p>info@example.com</p>
+                <h3>官方網站</h3>
+                <p>http://www.ncu.edu.tw/</p>
+                <a href="http://www.ncu.edu.tw/" target="_blank"><p style="color: rgb(43, 162, 192);">點我看網站</p></a>
               </div>
             </div><!-- End Info Item -->
 
